EKS - Japan - OLD/aws-eks-kubernetes-handson-eng/6_Expose_Pods_with_Ingress_Controller/ingress - Copy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # this is the case where a container accept HTTPS
  name: frontend
  namespace: default
spec:
  #  this is in case SSL termination happens at nginx ingress controller
  # tls:
  # - hosts:
  #   - a92226b56ed6548beaae3bcc7e3b9a5c-997944382.us-west-2.elb.amazonaws.com
  #   secretName: tls-secret 
  rules:
    - http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 80 
            path: /
